--- a/Confession/index.html
+++ b/Confession/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>我喜欢你❤️</title>
+<title>给我下单吧</title>
 <!-- style -->
 <link type="text/css" rel="stylesheet" href="css/theme.css">
 <script src="js/jquery-2.0.3.min.js"></script>
@@ -104,7 +104,7 @@ init_viewport();
 var theme = 'pure_words';
 console.log('theme ->' + theme);
 var theme_content = {
-	"pure_words_content": "遇见你是我所有美好故事的开始，所以，请别放开我的手，也别缺席我的将来，因为一辈子和你在一起才叫将来<um style='color: #F44336;'>💕</um>",
+	"pure_words_content": "遇见你是我所有美好故事的开始，所以，打游戏请叫上我！<um style='color: #F44336;'>💕</um>",
 	"typed_bool": "typed_y",
 	"cursor_char": "cursor_heart",
 	"bg_style_pure_words": "bg_opacity",
@@ -226,9 +226,9 @@ function display_pure_words() {
 	init_attachment();
 }
 var start_content = {
-	chase_title: "做我女朋友好不好<um style='color: #F44336;'>💕</um>",
-	chase_text: "承蒙你的出现，够我喜欢一生，我希望，以后你能用我的名字拒绝所有人<um style='color: #F44336;'>💕</um>",
-	chase_benefit: ["你是我拔掉氧气罐都想吻的人", "你是我跑完8000米还想拥抱的人", "你是我自罚三杯都不肯开口的秘密", "你是我赴汤蹈火都不肯放下的执着", "你是我电量只剩1%也想回信息的人", "你是我穷极一生不想醒来的梦"],
+	chase_title: "给我下单好不好<um style='color: #F44336;'>💕</um>",
+	chase_text: "承蒙你的出现，够我赚一星期的钱，我希望，以后你能用我拒绝所以喊你打游戏的人<um style='color: #F44336;'>💕</um>",
+	chase_benefit: ["你是我一天不打游戏就难受的人", "你是我跑完8000米还想打游戏的人", "你是我熬夜通宵都要打游戏的人", "你是我赴汤蹈火都不肯放下的执着"],
 	bg_style: "bg_custom",
 	bg_img: "images/2.jpg",
 	img_bool: "img_true",
